--- a/docs/index.ipynb
+++ b/docs/index.ipynb
@@ -34,12 +34,19 @@
     "from policyengine import PolicyEngineUS\n",
     "from IPython.display import Markdown\n",
     "\n",
-    "baseline, reformed = PolicyEngineUS().create_microsimulations(dict(\n",
-    "    gov_irs_income_bracket_rates_1=0.05, # Set the first tax rate to 5% (currently 10%)\n",
-    "))\n",
+    "baseline, reformed = PolicyEngineUS().create_microsimulations(\n",
+    "    dict(\n",
+    "        gov_irs_income_bracket_rates_1=0.05,  # Set the first tax rate to 5% (currently 10%)\n",
+    "    )\n",
+    ")\n",
     "\n",
-    "gain = reformed.calc(\"spm_unit_net_income\").sum() - baseline.calc(\"spm_unit_net_income\").sum()\n",
-    "Markdown(f\"From this code snippet above, PolicyEngine estimates that revenue loss from lowering the US first tax rate from 10\\% to 5\\% is **${gain.sum() / 1e9:.1f}bn**.\")"
+    "gain = (\n",
+    "    reformed.calc(\"spm_unit_net_income\").sum()\n",
+    "    - baseline.calc(\"spm_unit_net_income\").sum()\n",
+    ")\n",
+    "Markdown(\n",
+    "    f\"From this code snippet above, PolicyEngine estimates that revenue loss from lowering the US first tax rate from 10\\% to 5\\% is **${gain.sum() / 1e9:.1f}bn**.\"\n",
+    ")"
    ]
   }
  ],
